2012-09-11  Leif Walsh  <leif.walsh@gmail.com>

	* tests/osc.c (main): wrote test to check for bad behavior

	* tests/simple.c (main): change variable name

	* tests/easy.c (main): change variable name

	* Makefile.am (librle_@RLE_API_VERSION@_la_CFLAGS): fix flag setting

	* rle/rle.c (rle_encode_bytes): Implemented simple (worst case 2n) encoder
	(rle_decode_bytes): Implemented simple decoder

	* Makefile.am: set library visibility, make libtool build real
	binaries for tests

	* configure.ac: make build system silent

	* tests/simple.c (main): update old test to use unit test
	framework

	* tests/easy.c (main): create test that verifies a really easy
	buffer does get compressed (it doesn't yet)

	* tests/unittest.h (expect): create unit test framework, doesn't
	do much yet

2012-09-10  Leif Walsh  <leif.walsh@gmail.com>

	* tests/simple.c (main): write first unit test

	* rle/rle.c (rle_encode_bytes): create initial dummy testable functions
	(rle_decode_bytes): create initial dummy testable functions

	* rle/rle-debug.h (DBG): create debugging print functions
	(VPR): create debugging print functions

	* rle.h: create public API header

	* rleconfig.h.in: create autotools build system

	* configure.ac: create autotools build system

	* Makefile.am: create autotools build system
